update solr3